--- a/package.json
+++ b/package.json
@@ -33,6 +33,14 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
     "gatsby-cli": "^2.16.1",
     "gh-pages": "^3.1.0",
     "prettier": "2.2.1"
@@ -50,6 +58,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx ./src",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
