--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,63 @@
 {
   "parserOptions": {
     "sourceType": "module",
-    "ecmaVersion": 2020
+    "ecmaVersion": 2020, 
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "extends": ["airbnb", "plugin:react/recommended", "plugin:prettier/recommended"],
-  
+  "rules": {
+    "react/require-default-props": "off",
+    "no-console": "warn",
+    "react/no-danger": "off",
+    "no-use-before-define": "off",
+    "react/no-unescaped-entities": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "import/prefer-default-export": "off",
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "naver",
+        "jsx": "never"
+      }
+    ]
+  },
+  "overrides": [
+    {
+      "files": "**/*.+(ts|tsx)",
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": "./tsconfig.json"
+      },
+      "plugins": ["@typescript-eslint/eslint-plugin"],
+      "extends": [
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "eslint-config-prettier/@typescript-eslint"
+      ],
+      "settings": {
+        "import/resolver": {
+          "typescript": {} // this loads <rootdir>/tsconfig.json to eslint
+        }
+      },
+      "rules": {
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-use-before-define": "off",
+        "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+        "import/extensions": [
+          "error",
+          "ignorePackages",
+          {
+            "js": "naver",
+            "jsx": "never",
+            "ts": "never",
+            "tsx": "never"
+          }
+        ]
+      }
+    }
+  ]
 }
