--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -42,8 +45,10 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
     "gatsby-cli": "^2.16.1",
+    "gatsby-plugin-typescript": "^2.9.0",
     "gh-pages": "^3.1.0",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "typescript": "^4.1.3"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
