--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-cli": "^2.16.1",
     "gatsby-plugin-typescript": "^2.9.0",
     "gh-pages": "^3.1.0",
+    "husky": "^4.3.6",
     "prettier": "2.2.1",
     "typescript": "^4.1.3"
   },
@@ -55,7 +56,6 @@
     "gatsby"
   ],
   "license": "0BSD",
-  "main": "n/a",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
@@ -63,9 +63,13 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx ./src",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
+    "check-types": "tsc",
+    "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json|jsx|ts|tsx)\"",
+    "format": "yarn prettier --write",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx ./src",
+    "check-format": "yarn prettier -l",
+    "validate": "yarn check-types && yarn check-format && yarn lint",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "deploy": "gatsby build && gh-pages -d public -b publish",
