--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "yarn validate && yarn build",
-    "pre-push": "yarn validate && yarn build"
+    "pre-commit": "yarn validate",
+    "pre-push": "yarn build"
   }
 }
