--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gatsby-plugin-typescript": "^2.9.0",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
     "prettier": "2.2.1",
     "typescript": "^4.1.3"
   },
@@ -74,5 +75,11 @@
     "clean": "gatsby clean",
     "deploy": "gatsby build && gh-pages -d public -b publish",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "lint-staged": {
+    "src/**/*.{js, jsx, ts, tsx}": [
+      "yarn prettier --write",
+      "git add"
+    ]
   }
 }
