--- a/package.json
+++ b/package.json
@@ -77,8 +77,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "lint-staged": {
-    "src/**/*.{js, jsx, ts, tsx}": [
-      "yarn validate",
+    "src/**/*.+(js|jsx|ts|tsx)": [
       "yarn format",
       "git add"
     ]
