--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
   "lint-staged": {
     "src/**/*.+(js|jsx|ts|tsx)": [
       "prettier --write",
-      "eslint -fix",
+      "eslint --fix",
       "git add"
     ]
   }
