--- a/package.json
+++ b/package.json
@@ -8,49 +8,51 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "gatsby": "^2.26.1",
-    "gatsby-image": "^2.5.0",
-    "gatsby-plugin-feed": "^2.7.0",
-    "gatsby-plugin-google-analytics": "^2.5.0",
-    "gatsby-plugin-manifest": "^2.6.1",
-    "gatsby-plugin-offline": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.4.0",
-    "gatsby-plugin-sharp": "^2.8.0",
-    "gatsby-remark-copy-linked-files": "^2.4.0",
-    "gatsby-remark-images": "^3.5.1",
-    "gatsby-remark-prismjs": "^3.7.0",
-    "gatsby-remark-responsive-iframe": "^2.5.0",
-    "gatsby-remark-smartypants": "^2.4.0",
-    "gatsby-source-filesystem": "^2.5.0",
-    "gatsby-transformer-remark": "^2.10.0",
-    "gatsby-transformer-sharp": "^2.6.0",
-    "prismjs": "^1.22.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "gatsby": "^3.0.0-next",
+    "gatsby-image": "^3.1.0",
+    "gatsby-plugin-feed": "^3.1.0",
+    "gatsby-plugin-google-analytics": "^3.1.0",
+    "gatsby-plugin-manifest": "^3.1.0",
+    "gatsby-plugin-offline": "^4.1.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-sass": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.1.2",
+    "gatsby-remark-copy-linked-files": "^3.1.0",
+    "gatsby-remark-images": "^4.1.1",
+    "gatsby-remark-prismjs": "^4.1.0",
+    "gatsby-remark-responsive-iframe": "^3.1.0",
+    "gatsby-remark-smartypants": "^3.1.0",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-remark": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.32.8",
+    "typeface-merriweather": "1.1.13",
+    "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "eslint": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "gatsby-cli": "^2.16.1",
-    "gatsby-plugin-typescript": "^2.9.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "gatsby-cli": "^3.1.0",
+    "gatsby-plugin-typescript": "^3.1.0",
     "gh-pages": "^3.1.0",
-    "husky": "^4.3.6",
-    "lint-staged": "^10.5.3",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
     "prettier": "2.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
