--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "sass": "^1.32.8",
+    "styled-jsx": "^3.4.4",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13"
   },
