--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "heozeop-blog",
   "private": true,
-  "version": "0.1.0",
-  "homepage":"https://heozeop.github.io/",
+  "version": "0.1.1",
+  "homepage": "https://heozeop.github.io/",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.0.0-next",
     "gatsby-image": "^3.1.0",
     "gatsby-plugin-feed": "^3.1.0",
@@ -13,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sass": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.2",
+    "gatsby-plugin-styled-components": "^4.2.0",
     "gatsby-remark-copy-linked-files": "^3.1.0",
     "gatsby-remark-images": "^4.1.1",
     "gatsby-remark-prismjs": "^4.1.0",
@@ -26,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "sass": "^1.32.8",
+    "styled-components": "^5.2.3",
     "styled-jsx": "^3.4.4",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13"
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.23.0",
