--- a/.huskyrc
+++ b/.huskyrc
@@ -2,5 +2,6 @@
   "hooks": {
     "pre-commit": "lint-staged",
     "pre-push": "lint-staged && yarn build",
+    "post-push": "yarn deploy",
   }
 }
